# sillydb

./: Cargo.toml  README.md
src/: db.rs  lib.rs  persister.rs
src/postgres/: mod.rs  utils.rs
src/sqlite/: deserializer.rs  mod.rs
