[package]
name = "sillydb"
version = "0.1.1"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2021"
description = "Tools to interact with relational databases"
repository = "https://github.com/eutampieri/sillydb.git"
license = "MIT"
keywords = ["database", "abstraction"]
categories = ["database"]

[features]
sqlite = ["dep:sqlite"]
postgres = ["dep:postgres"]
default = ["sqlite", "postgres"]

[dependencies]
sqlite = { version = "0.36.2", optional = true }
postgres = { version = "0.19.10", optional = true }
